Update github actions and code analysis

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,9 +1,9 @@
 # Organization
 sonar.organization=luisherrmann
 # Project name
-sonar.projectName=tsconcat_private
+sonar.projectName=tsconcat
 # Project key from environment variable
-sonar.projectKey=luisherrmann_tsconcat_private
+sonar.projectKey=luisherrmann_tsconcat
 # Paths to the source code
 sonar.sources=tsconcat
 # Paths to the tests
